--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Leaf LR v0.1</title>
 		<meta charset="UTF-8">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+		<meta name="apple-mobile-web-app-status-bar-style" content="default">
 		<link rel="apple-touch-icon" href="notes.png">
 <!-- Dependências -->
 		<link rel="stylesheet" href="css/onsen-css-components.min.css" />
