--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	<script src="js/angular.min.js"></script>
 	<script src="js/onsenui.min.js"></script>
 	<script src="js/angular-onsenui.min.js"></script>
-	<script src="js/angular-route.min.js"></script>
 
 </head>
 
@@ -43,7 +42,7 @@
 		<ons-page>
 			<ons-toolbar>
 				<div class="left"><ons-back-button></ons-back-button></div>
-				<div class="center">{{ nav.topPage.data.title }}</div>
+				<div class="center">Informações</div>
 			</ons-toolbar>
 			<ons-card>
 				<div class="title">Informações</div>
